--- a/index-style.css
+++ b/index-style.css
@@ -1,11 +1,12 @@
 body {
     font-family: sans-serif;
+    background-color: lightgrey;
 }
 
 h1 {
     text-align: center;
     font-size: 50px;
-    color: pink;
+    color: rgb(191, 52, 75);
     text-decoration-line: underline;
     text-underline-offset: 15px;
 }
@@ -13,4 +14,5 @@ h1 {
 #lasagna-link {
     font-style: italic;
     color: red;
+    font-size: 20px;
 }
