--- a/recipes/style.css
+++ b/recipes/style.css
@@ -15,10 +15,8 @@ h1 {
 #lasagna-image {
     height: 400px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin: 30px auto;
+    
 }   
 
 h2 {
@@ -65,3 +63,4 @@ footer {
 .steps {
     margin: 100px 50px;
 }
+
