--- a/recipes/style.css
+++ b/recipes/style.css
@@ -2,8 +2,8 @@ main {
     font-family: monospace;
     background-color: aqua;
     font-size: 15px;
+    padding-top: 30px;
     overflow: hidden;
-    padding-top: 30px
 }
 
 h1 {
@@ -13,16 +13,15 @@ h1 {
 }
 
 #lasagna-image {
-    height: 400px;
-    display: block;
-    margin: 30px auto;
+    height: 600px;
+    margin-right: 30px
     
 }   
 
 h2 {
     text-decoration: underline;
     font-size: 30px;
-    padding: 5px
+    padding: 5px;
 }
 
 
@@ -57,10 +56,84 @@ footer {
 }
 
 .ingredients {
-    margin: 100px 50px;
+    margin: -50px 20px;
 }
 
 .steps {
-    margin: 100px 50px;
+    margin: 50px 50px;
+    width: 80%
+}
+.title-img {
+    display: flex;
+    justify-content: space-evenly; 
+    align-items: center;
+    width: 100%;
 }
 
+.ingredients-steps-box {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+
+.title-img {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    padding-right: 50px;
+    gap: 20px;
+}
+
+.text-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    max-width: 50%;
+}
+
+#meat-image {
+    width:170px;
+    height:110px
+}
+
+#onion-garlic-image {
+    width:170px;
+    height:110px
+}
+
+#tomato-image {
+    width:170px;
+    height:110px
+}
+
+#sugar-image {
+    width:170px;
+    height:110px
+}
+
+#spices-image{
+    width:170px;
+    height:110px;
+}
+
+#noodles-image {
+    width:170px;
+    height:110px;
+}
+
+#cheese-image {
+    width:170px;
+    height:110px;
+}
+
+#eggs-image {
+    width:170px;
+    height:110px;
+}
+
+.ingredient-images {
+    margin-top: 50px;
+    margin-left: 50px
+}
